app/assets/stylesheets/global.css.scss
$bc-green: #85B931;
$dark_grey: #3E3D42;
$darkest_grey: #333;
$light_grey: #48494D;
$text_light: #EEEEEE;
$dark_text: #333;
$red_link: #C84335;
$redder_link: #E47266;
$link_color: #FF8100;

body {
  background-color: $light_grey;
}

.shadowed {
  -webkit-box-shadow: 3px 3px 15px #333;
  -moz-box-shadow: 3px 3px 15px #333;
  box-shadow: 3px 3px 15px #333;
}

a.brand {
  small {
    color: #666;
    position:relative;
    top:-2px;
  }
}

#header-name {
  border-width: 5px 0;
  border-style: solid;
  border-color: $bc-green;
  color: white;
  font-size:58px;
  line-height:58px;
  margin-bottom:10px;
}

#mission {
  color:white;
  font-style:italic;
  margin-bottom:10px;
}

footer {
  background-color: $bc-green;
  padding: 10px;
  color:white;

  ul#ext-links {
    margin-left: 0;
    a li {
      color:white;
      list-style:none;

      font-size:18px;
      line-height: 22px;

      overflow:hidden;
    }
    span {
      padding: 5px;

      float:left;
      width: 200px;
      height: 22px;
    }
    span.logo {
      width: 24px;

      img {
        position:relative;
        top: -1px;
      }
    }

  }
}

.can-haz-shadow {
  height: 0;

  -webkit-box-shadow: 0px 5px 25px 0px rgba(3, 3, 3, 0.5);
  -moz-box-shadow: 0px 5px 25px 0px rgba(3, 3, 3, 0.5);
  box-shadow: 0px 5px 25px 0px rgba(3, 3, 3, 0.5);
}
#main-content {
  background-color: #3E3D42;
  color:white;
  padding: 0 10px 5px 10px;

  > h2 {
    color: white;
    border-bottom: 1px solid #666;
    margin-bottom: 10px;
  }

  a {
    color: #FF7D1B
  }
}

#post-list {
  list-style-type:none;
  margin-left: 0;

  li {
    margin-bottom: 15px;
    border-bottom: 1px solid #333;

    h3 {
    }
    div.body {
      padding: 5px;
    }
  }
}

